<resources>
    <string name="app_name">CapitalismConstructor</string>
    <string name="title">Capitalism Constructor</string>
    <string name="author">Owen Frere</string>

    <string name="nav_home_title">Home</string>
    <string name="nav_play_title">Play</string>
    <string name="nav_settings_title">Settings</string>

    <string name="save_button">Save</string>
    <string name="reset_button">Reset</string>

    <string name="starting_cash">Starting cash</string>
    <string name="map_width">Map width</string>
    <string name="map_height">Map height</string>

    <string name="save_warning">Saving will delete game state</string>

    <string name="demolish">Demolish</string>
    <string name="add_photo">Add Photo</string>

    <string name="road">Road</string>
    <string name="commercial">Commercial</string>
    <string name="residential">Residential</string>

    <string name="close">Close</string>

</resources>
