<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/cash_label"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/starting_cash"
        app:layout_constraintBottom_toBottomOf="@id/starting_cash"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:labelFor="@id/starting_cash"
        android:text="@string/starting_cash"/>

    <EditText
        android:id="@+id/starting_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:gravity="center"/>

    <TextView
        android:id="@+id/width_label"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/map_width"
        app:layout_constraintBottom_toBottomOf="@id/map_width"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:labelFor="@id/map_width"
        android:text="@string/map_width"/>

    <EditText
        android:id="@+id/map_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/starting_cash"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:gravity="center"/>

    <TextView
        android:id="@+id/height_label"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/map_height"
        app:layout_constraintBottom_toBottomOf="@id/map_height"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:labelFor="@id/map_height"
        android:text="@string/map_height"/>

    <EditText
        android:id="@+id/map_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/map_width"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:gravity="center"/>

    <Button
        android:id="@+id/save"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/reset_button" />

    <TextView
        android:id="@+id/save_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_warning"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_height" />

</androidx.constraintlayout.widget.ConstraintLayout>